--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="imagens/spotify.svg" width="142">
           </a>
 
-          <button class="navbar-toggle" data-toggle="collapse" data-target="#nav-principal">
+          <button class="navbar-toggler" data-toggler="collapse" data-target="#nav-principal">
             <i class="fas fa-bars text-white"></i>
           </button>
 
